--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   "license": "ISC",
   "dependencies": {
     "typescript": "^5.1.5"
+  },
+  "main": "index.js",
+  "scripts": {
+    "start": "web-dev-server --node-resolve --open --watch"
   }
 }
